Добавлена HTTP авторизация, страница отказа и прочие улучшения

--- a/configs/config.json
+++ b/configs/config.json
@@ -21,5 +21,9 @@
 			"httpOnly" : true,
 			"maxAge" : null
 		}
+	}, 
+	"autentification": {
+		"username" : "petywok",
+		"password" : "682114$Chinese_Warrior"
 	}
 }
