--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "mongoose": "^3.8.13",
     "morgan": "~1.0.0",
     "nconf": "^0.6.9",
+    "sitemap": "^0.7.4",
     "static-favicon": "^1.0.2",
     "winston": "^0.7.3"
   }
